Added morpheus page and changed images to circular in testimonials section

--- a/index.html
+++ b/index.html
@@ -261,6 +261,19 @@
                     <p class="review-content">For Science, keep a very open mind about everything! Research well, flit through every idea, discuss things, and fearlessly implement things.Be brave about it. ARES has been a great and memorable journey.</p>
                   </div>
                 </div>
+                <div class="single-review swiper-slide">
+                  <div class="review-header d-flex justify-content-between">
+                    <div class="review-client">
+                      <div class="media"><img class="img-fluid rounded-circle client-avatar" data-src="img/team/Abhinav Gupta.webp" alt="Client">
+                        <div class="client-details">
+                          <h6 class="client-name">Abhinav Gupta</h6><span class="client-role">Electronics-Lead-2019</span>
+                        </div>
+                      </div>
+                    </div><i class="icon ion-md-quote review-icon"></i>
+                  </div>
+                  <p class="review-content">ARES is a team you, which want to be part of, if you are looking to hone your technical and leadership skills in all domains of engineering. This society has allowed me to observe the most capable engineering undergraduates, innovate brilliantly with just the resources at hand. A truly inspiring place to be in.</p>
+                </div>
+              </div>
               </div>
             </div>
             <!-- Pricing section-->
@@ -357,6 +370,33 @@
                       <li>21Ah Li-ion</li>
                       <li>Retractable Auger-based Drill</li>
                     </ul><a class="btn button-main button-scheme plan-btn" href="Atom-II/atom-II.html" role="button" target="_blank">More Info</a>
+                  </div>
+                </div>
+                <div class="col-lg-4 morpheus-align-centre">
+                  <div class="single-plan mb-4 mb-sm-5">
+                    <a class="portfolio-item" href="img/atom-1.webp"  data-lightbox>
+                        <center>
+                          <div class="portfolio-wrapper"><img class="img-fluid" alt="Item" src="img/Picture4.webp"  
+                            style="height: 100px; width: 100px;" >
+                            <div class="item-content">
+                              <h6 class="content-title"><!--Label Tag Mockup--></h6><span class="content-more">Rover</span>
+                            </div>
+                          </div>
+                        </center>
+                      </a>
+                    <h3 class="plan-type">Morpheus</h3>
+                    <h2 class="plan-price">2020</h2>
+                    <ul class="list-unstyled plan-list">
+                      <li>Aluminium 6061 T-6</li>
+                      <li>Synthetic Rubber Wheel</li>
+                      <li>2 Rocker Suspension System</li>
+                      <li>5 DOF Articulated Manipulators</li>
+                      <li>5.8 Ghz TP-Link CPE</li>
+                      <li>Nvidia Jetson Xavier</li>
+                      <li>NEMA 23</li>
+                      <li>16V & 26V Li-Lion</li>
+                      <li>Auger-based Drill</li>
+                    </ul><a class="btn button-main button-scheme plan-btn" href="Morpheus/morpheus.html" role="button" target="_blank">More Info</a>
                   </div>
                 </div>
                 </div>
