--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
   </div>
   <div id="overlay-effect"></div>
   <!-- Navbar-->
-  <nav class="navbar-expand-md navbar fixed-top" id="navbar"><a class="navbar-brand" data-scroll="" href="#home-area">
+  <nav class="navbar-expand-md navbar fixed-top" id="navbar">
+    <!-- <a class="navbar-brand" data-scroll="" href="#home-area"> -->
       <!-- Navbar Logo-->
-      <img class="img-fluid" src="" ></a>
+      <!-- <img class="img-fluid"  src="" ></a> -->
     <span class="navbar-menu ml-auto" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" role="button"><span class="btn-line"></span></span>
     <div class="collapse navbar-collapse order-1 order-lg-0" id="navbarSupportedContent">
       <!-- Navbar menu-->
@@ -386,7 +387,7 @@
                         </center>
                       </a>
                     <h3 class="plan-type">Morpheus</h3>
-                    <h2 class="plan-price">2020</h2>
+                    <h2 class="plan-price">2021</h2>
                     <ul class="list-unstyled plan-list">
                       <li>Aluminium 6061 T-6</li>
                       <li>Synthetic Rubber Wheel</li>
