Modified Testimonials section,updated footer and added pegasus card.

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                       </div>
                     </div><i class="icon ion-md-quote review-icon"></i>
                   </div>
-                  <p class="review-content">ARES is a team you, which want to be part of, if you are looking to hone your technical and leadership skills in all domains of engineering. This society has allowed me to observe the most capable engineering undergraduates, innovate brilliantly with just the resources at hand. A truly inspiring place to be in.</p>
+                  <p class="review-content">ARES is a team you, which want to be part of, if you are looking to hone your technical and leadership skills in all domains of engineering. This society has allowed me to observe the most capable engineering undergraduates.</p>
                 </div>
               </div>
               </div>
@@ -374,7 +374,35 @@
                     </ul><a class="btn button-main button-scheme plan-btn" href="Atom-II/atom-II.html" role="button" target="_blank">More Info</a>
                   </div>
                 </div>
-                <div class="col-lg-4 morpheus-align-centre">
+                
+                <div class="col-lg-4">
+                  <div class="single-plan mb-4 mb-sm-5">
+                    <a class="portfolio-item" href="img/atom-1.webp"  data-lightbox>
+                        <center>
+                          <div class="portfolio-wrapper"><img class="img-fluid" alt="Item" src="img/Picture4.webp"  
+                            style="height: 100px; width: 100px;" >
+                            <div class="item-content">
+                              <h6 class="content-title"><!--Label Tag Mockup--></h6><span class="content-more">Rover</span>
+                            </div>
+                          </div>
+                        </center>
+                      </a>
+                    <h3 class="plan-type">Pegasus</h3>
+                    <h2 class="plan-price">2021</h2>
+                    <ul class="list-unstyled plan-list">
+                      <li>Aluminium 6063 T-6</li>
+                      <li>Synthetic Rubber Wheel</li>
+                      <li>Double Rocket Suspension</li>
+                      <li>5 DOF Articulated Manipulators</li>
+                      <li>2.4 GHz & 5.8 GHz Antenna</li>
+                      <li>Nvidia Jetson Xavier</li>
+                      <li>NEMA 23</li>
+                      <li>120 Ah Li-ion</li>
+                      <li>Linear Actuator mechanism</li>
+                    </ul><a class="btn button-main button-scheme plan-btn" href="Pegasus/pegasus.html" role="button" target="_blank">More Info</a>
+                  </div>
+                </div>
+                <div class="col-lg-4">
                   <div class="single-plan mb-4 mb-sm-5">
                     <a class="portfolio-item" href="img/atom-1.webp"  data-lightbox>
                         <center>
@@ -387,7 +415,7 @@
                         </center>
                       </a>
                     <h3 class="plan-type">Morpheus</h3>
-                    <h2 class="plan-price">2021</h2>
+                    <h2 class="plan-price">2022</h2>
                     <ul class="list-unstyled plan-list">
                       <li>Aluminium 6061 T-6</li>
                       <li>Synthetic Rubber Wheel</li>
