--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <link rel="stylesheet" href="css/lity.min.css">
   <link rel="stylesheet" href="css/simplebar.min.css">
   <link rel="stylesheet" href="css/jquery.mb.YTPlayer.min.css">
+  <link rel="stylesheet" href="css/collage.css">
   <!-- Main CSS-->
   <link rel="stylesheet" href="css/main.css">
   <!-- CSS Color scheme-->
@@ -57,6 +58,7 @@
         <li class="nav-item"><a class="nav-link" href="#portfolio">Team</a></li>
         <!-- <li class="nav-item"><a class="nav-link" href="http://blog.aresroboticsnsut.com/" target="_blank">Blog</a></li> -->
         <li class="nav-item"><a class="nav-link" href="#contact">Our Sponsors</a></li>
+        <li class="nav-item"><a class="nav-link" href="#freshers">Freshers Page</a></li>
         <!-- <li class="nav-item"><a class="nav-link" href="#sponsi">Our Sponsors</a></li> -->
 
       </ul>
@@ -442,7 +444,8 @@
   <div class="lightbox-wrapper" id="resume" data-simplebar>
     <div class="container">
       <div class="lightbox-close">
-        <div class="close-btn" data-modal-close=""><span class="btn-line"></span></div>
+        <div class="close-btn" data-modal-close=""><span class="btn-line"></span>
+        </div>
       </div>
       <div class="row">
         <div class="col-12">
@@ -607,6 +610,9 @@
       </div>
     </div>
   </div>
+
+
+  <!-- Freshers Page -->
   <!-- Contact lightbox-->
   <div class="lightbox-wrapper" id="contact" data-simplebar>
     <div class="container">
@@ -772,6 +778,53 @@
                     </ul>
                   </div>
                 </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="lightbox-wrapper" id="freshers" data-simplebar>
+    <div class="container">
+      <div class="lightbox-close">
+        <div class="close-btn" data-modal-close=""><span class="btn-line"></span>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12">
+          <div class="lightbox-content">
+            <div class="row">
+              <div class="col-12">
+                <div class="section-heading page-heading">
+                  <h3 class="section-title">Fresher's Page!!!</h3>
+                  <div class="animated-bar"></div>
+                </div>
+                <div class="section-heading page-heading">
+              <h5 class = "section-title" style="font-size: x-large;">Ethinic 2K21 !</h5>
+              <div class="animated-bar"></div><br>
+              <div>
+                 <div class="con">
+		              <div class="wrap">
+			            <div class="top"></div>
+			            <div class="middle"></div>
+			            <div class="bottom"></div>
+		            </div>
+		            <div class="wrap two">
+			            <div class="top"></div>
+			            <div class="middle"></div>
+			            <div class="bottom"></div>
+		            </div>
+              </div>
+              <br>
+              </div>
+              <div class="section-heading page-heading">
+                <h5 class = "section-title" style="font-size: x-large">Comic Book !</h5>
+                <div class="animated-bar"></div><br>
+                <iframe src="./docs/Comic_Book.pdf#view=fitH" style="width:100%; height:100%;min-height: 800px;" frameborder=0></iframe>
+              </div>
+                
               </div>
             </div>
           </div>
