Creative Corner Added

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <a class="nav-link" href="#contact">Our Sponsors</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#freshers">Freshers Page</a>
+            <a class="nav-link" href="#freshers">Creative Corner</a>
           </li>
           <!-- <li class="nav-item"><a class="nav-link" href="#sponsi">Our Sponsors</a></li> -->
         </ul>
@@ -1024,18 +1024,21 @@
                       class="list-inline filter-control"
                       role="group"
                       aria-label="Filter Control"
+                      id="myBtnContainer"
                     >
-                      <li class="list-inline-item tab-active" data-filter="*">
+                      <li class="btn active" onclick="filterSelection('all')">
                         All Team Members
                       </li>
-                      <li class="list-inline-item" data-filter=".alpha">
+                      <li class="btn" onclick="filterSelection('alpha')">
                         2021
                       </li>
-                      <li class="list-inline-item" data-filter=".beta">2020</li>
-                      <li class="list-inline-item" data-filter=".gamma">
+                      <li class="btn" onclick="filterSelection('beta')">
+                        2020
+                      </li>
+                      <li class="btn" onclick="filterSelection('gamma')">
                         2019
                       </li>
-                      <li class="list-inline-item" data-filter=".delta">
+                      <li class="btn" onclick="filterSelection('delta')">
                         2018
                       </li>
                     </ul>
@@ -1447,30 +1450,39 @@
               <div class="row">
                 <div class="col-12">
                   <div class="section-heading page-heading">
-                    <h3 class="section-title">Fresher's Page!!!</h3>
+                    <h3 class="section-title">Creative Corner!</h3>
                     <div class="animated-bar"></div>
                   </div>
                   <div class="section-heading page-heading">
                     <h5 class="section-title" style="font-size: x-large">
-                      Ethinic 2K21 !
+                      Ethnic 2K21 !
                     </h5>
                     <div class="animated-bar"></div>
                     <br />
                     <div>
-                      <div class="con">
-                        <div class="wrap">
-                          <div class="top"></div>
-                          <div class="middle"></div>
-                          <div class="bottom"></div>
+                      <div class="rw">
+                        <div class="abc">
+                          <img src="./collage/1.jpeg" style="width: 100%" />
+                          <img src="./collage/2.jpeg" style="width: 100%" />
+                          <img src="./collage/3.jpeg" style="width: 100%" />
                         </div>
-                        <div class="wrap two">
-                          <div class="top"></div>
-                          <div class="middle"></div>
-                          <div class="bottom"></div>
+                        <div class="abc">
+                          <img src="./collage/4.jpeg" style="width: 100%" />
+                          <img src="./collage/5.jpeg" style="width: 100%" />
+                          <img src="./collage/6.jpeg" style="width: 100%" />
+                        </div>
+                        <div class="abc">
+                          <img src="./collage/7.jpeg" style="width: 100%" />
+                          <img src="./collage/8.jpeg" style="width: 100%" />
+                          <img src="./collage/9.jpeg" style="width: 100%" />
+                        </div>
+                        <div class="abc">
+                          <img src="./collage/10.jpeg" style="width: 100%" />
+                          <img src="./collage/11.jpeg" style="width: 100%" />
                         </div>
                       </div>
-                      <br />
                     </div>
+                    <br />
                     <div class="section-heading page-heading">
                       <h5 class="section-title" style="font-size: x-large">
                         Comic Book !
