--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
                 </div>
               </div>
               <!-- Testimonials section-->
-              <div class="testimonials-section single-section">
+              <!-- <div class="testimonials-section single-section">
                 <div class="row">
                   <div class="col-12">
                     <div class="section-heading">
@@ -427,9 +427,9 @@
                   </div>
                 </div>
                 <div class="my-slider">
-                  <div class="slider-item">
-                    <!-- Single review-->
-                    <div class="single-review swiper-slide">
+                  <div class="slider-item"> -->
+              <!-- Single review-->
+              <!-- <div class="single-review swiper-slide">
                       <div class="review-header d-flex justify-content-between">
                         <div class="review-client">
                           <div class="media">
@@ -459,7 +459,6 @@
                     </div>
                   </div>
                   <div class="slider-item">
-                    <!-- Single review-->
                     <div class="single-review swiper-slide">
                       <div class="review-header d-flex justify-content-between">
                         <div class="review-client">
@@ -489,7 +488,6 @@
                     </div>
                   </div>
                   <div class="slider-item">
-                    <!-- Single review-->
                     <div class="single-review swiper-slide">
                       <div class="review-header d-flex justify-content-between">
                         <div class="review-client">
@@ -544,7 +542,7 @@
                     </p>
                   </div>
                 </div>
-              </div>
+              </div> -->
             </div>
             <!-- Pricing section-->
             <div class="pricing-section single-section">
