--- a/index.html
+++ b/index.html
@@ -1017,53 +1017,45 @@
               <div class="portfolio-section single-section">
                 <div class="row">
                   <!-- Filter nav-->
-                  <ul class="filters">
-                    <li class="filters__item">
-                      <div
+                  <div class="col-12">
+                    <ul class="list-inline filter-control">
+                      <li
+                        class="list-inline-item"
                         onclick="f('all')"
-                        class="filters__btn js-filter"
                         data-color="all"
                       >
                         All Team Members
-                      </div>
-                    </li>
-                    <li class="filters__item">
-                      <div
+                      </li>
+                      <li
+                        class="list-inline-item"
                         onclick="f('alpha')"
-                        class="filters__btn js-filter"
                         data-color="alpha"
                       >
                         2021
-                      </div>
-                    </li>
-                    <li class="filters__item">
-                      <div
+                      </li>
+                      <li
+                        class="list-inline-item"
                         onclick="f('beta')"
-                        class="filters__btn js-filter"
                         data-color="beta"
                       >
                         2020
-                      </div>
-                    </li>
-                    <li class="filters__item">
-                      <div
+                      </li>
+                      <li
+                        class="list-inline-item"
                         onclick="f('gamma')"
-                        class="filters__btn js-filter"
                         data-color="gamma"
                       >
                         2019
-                      </div>
-                    </li>
-                    <li class="filters__item">
-                      <div
+                      </li>
+                      <li
+                        class="list-inline-item"
                         onclick="f('delta')"
-                        class="filters__btn js-filter"
                         data-color="delta"
                       >
                         2018
-                      </div>
-                    </li>
-                  </ul>
+                      </li>
+                    </ul>
+                  </div>
                 </div>
                 <div class="section-team">
                   <div class="container">
