--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- Title-->
     <title>ARES Robotics</title>
     <!-- Description-->
-    <meta name="description" content="Personal Portfolio Template" />
+    <meta name="description" content="Official Website of A.R.E.S Robotics" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
