Teams CORS resolved

--- a/index.html
+++ b/index.html
@@ -97,7 +97,9 @@
             <a class="nav-link" href="#resume">Journey</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#portfolio">Team</a>
+            <a class="nav-link" href="#portfolio" onclick="yourFunction()"
+              >Team</a
+            >
           </li>
           <!-- <li class="nav-item"><a class="nav-link" href="http://blog.aresroboticsnsut.com/" target="_blank">Blog</a></li> -->
           <li class="nav-item">
