updated USA PCB Image

--- a/index.html
+++ b/index.html
@@ -1165,7 +1165,7 @@
                       <figure class="snip0026 fig3">
                         <img
                           style="width: 80%"
-                          src="https://usa.pcbpower.com/images/pcb_power_logo.svg"
+                          src="./images/pcbusa.jpg"
                           alt="sample48"
                         />
                         <figcaption>
